; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_alloc.c_xfs_alloc_query_all.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/libxfs/extr_xfs_alloc.c_xfs_alloc_query_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_btree_cur = type { i64 }
%struct.xfs_alloc_query_range_info = type { i32, i8* }

@XFS_BTNUM_BNO = common dso_local global i64 0, align 8
@xfs_alloc_query_range_helper = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xfs_alloc_query_all(%struct.xfs_btree_cur* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.xfs_btree_cur*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.xfs_alloc_query_range_info, align 8
  store %struct.xfs_btree_cur* %0, %struct.xfs_btree_cur** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %4, align 8
  %9 = getelementptr inbounds %struct.xfs_btree_cur, %struct.xfs_btree_cur* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @XFS_BTNUM_BNO, align 8
  %12 = icmp eq i64 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @ASSERT(i32 %13)
  %15 = load i8*, i8** %6, align 8
  %16 = getelementptr inbounds %struct.xfs_alloc_query_range_info, %struct.xfs_alloc_query_range_info* %7, i32 0, i32 1
  store i8* %15, i8** %16, align 8
  %17 = load i32, i32* %5, align 4
  %18 = getelementptr inbounds %struct.xfs_alloc_query_range_info, %struct.xfs_alloc_query_range_info* %7, i32 0, i32 0
  store i32 %17, i32* %18, align 8
  %19 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %4, align 8
  %20 = load i32, i32* @xfs_alloc_query_range_helper, align 4
  %21 = call i32 @xfs_btree_query_all(%struct.xfs_btree_cur* %19, i32 %20, %struct.xfs_alloc_query_range_info* %7)
  ret i32 %21
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @xfs_btree_query_all(%struct.xfs_btree_cur*, i32, %struct.xfs_alloc_query_range_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
